--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,58 @@ a {
     .menu li:hover a {
       color: #6f1e51; }
 
+.modo-recomendado {
+  border: 2px solid #ED4C67;
+  border-radius: 40px;
+  width: 500px;
+  height: 400px;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -55%);
+  display: flex;
+  flex-direction: row; }
+  .modo-recomendado .reto {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    padding: 20px; }
+    .modo-recomendado .reto .titulo-reto {
+      color: white;
+      margin-bottom: 15px;
+      text-transform: uppercase; }
+    .modo-recomendado .reto .fecha-reto {
+      text-align: left;
+      font-weight: 100;
+      font-size: 18px;
+      color: #f4f4f4; }
+    .modo-recomendado .reto .iniciar-reto {
+      display: block;
+      color: white;
+      padding: 5px;
+      text-transform: uppercase;
+      transition: all .8s ease; }
+      .modo-recomendado .reto .iniciar-reto:hover {
+        border-radius: 5px;
+        transform: scale(1.05); }
+    .modo-recomendado .reto.reto-diario {
+      border-right: 2px solid #ED4C67;
+      background-color: #6F1E51;
+      border-top-left-radius: 40px;
+      border-bottom-left-radius: 40px; }
+      .modo-recomendado .reto.reto-diario .iniciar-reto {
+        background-color: #1B1464; }
+    .modo-recomendado .reto.reto-semanal {
+      border-left: 2px solid #ED4C67;
+      background-color: #1B1464;
+      border-top-right-radius: 40px;
+      border-bottom-right-radius: 40px; }
+      .modo-recomendado .reto.reto-semanal .iniciar-reto {
+        background-color: #6F1E51; }
+
 @media (max-width: 850px) {
   .menu {
     top: 88%;
