--- a/css/main.css
+++ b/css/main.css
@@ -134,57 +134,61 @@ a {
   gap: 10px; }
   .tablero .informacion-tablero {
     grid-column: span 12;
-    border-bottom: 1px solid #f4f4f4; }
+    border-bottom: 1px solid #f4f4f4;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: #fff; }
   .tablero .carta:nth-child(1) {
-    animation-delay: 250ms; }
+    animation-delay: 125ms; }
     .tablero .carta:nth-child(1) .lado.frente {
       background: #FFC312; }
   .tablero .carta:nth-child(2) {
-    animation-delay: 500ms; }
+    animation-delay: 250ms; }
     .tablero .carta:nth-child(2) .lado.frente {
       background: #12CBC4; }
   .tablero .carta:nth-child(3) {
-    animation-delay: 750ms; }
+    animation-delay: 375ms; }
     .tablero .carta:nth-child(3) .lado.frente {
       background: #FFC312; }
   .tablero .carta:nth-child(4) {
-    animation-delay: 1000ms; }
+    animation-delay: 500ms; }
     .tablero .carta:nth-child(4) .lado.frente {
       background: #12CBC4; }
   .tablero .carta:nth-child(5) {
-    animation-delay: 1250ms; }
+    animation-delay: 625ms; }
     .tablero .carta:nth-child(5) .lado.frente {
       background: #FFC312; }
   .tablero .carta:nth-child(6) {
-    animation-delay: 1500ms; }
+    animation-delay: 750ms; }
     .tablero .carta:nth-child(6) .lado.frente {
       background: #12CBC4; }
   .tablero .carta:nth-child(7) {
-    animation-delay: 1750ms; }
+    animation-delay: 875ms; }
     .tablero .carta:nth-child(7) .lado.frente {
       background: #FFC312; }
   .tablero .carta:nth-child(8) {
-    animation-delay: 2000ms; }
+    animation-delay: 1000ms; }
     .tablero .carta:nth-child(8) .lado.frente {
       background: #12CBC4; }
   .tablero .carta:nth-child(9) {
-    animation-delay: 2250ms; }
+    animation-delay: 1125ms; }
     .tablero .carta:nth-child(9) .lado.frente {
       background: #FFC312; }
   .tablero .carta:nth-child(10) {
-    animation-delay: 2500ms; }
+    animation-delay: 1250ms; }
     .tablero .carta:nth-child(10) .lado.frente {
       background: #12CBC4; }
   .tablero .carta:nth-child(11) {
-    animation-delay: 2750ms; }
+    animation-delay: 1375ms; }
     .tablero .carta:nth-child(11) .lado.frente {
       background: #FFC312; }
   .tablero .carta:nth-child(12) {
-    animation-delay: 3000ms; }
+    animation-delay: 1500ms; }
     .tablero .carta:nth-child(12) .lado.frente {
       background: #12CBC4; }
   .tablero .carta:nth-child(13) {
-    animation-delay: 3250ms; }
+    animation-delay: 1625ms; }
     .tablero .carta:nth-child(13) .lado.frente {
       background: #FFC312; }
   .tablero .carta {
