--- a/css/main.css
+++ b/css/main.css
@@ -139,58 +139,9 @@ a {
     flex-direction: row;
     justify-content: space-between;
     color: #fff; }
-  .tablero .carta:nth-child(1) {
-    animation-delay: 125ms; }
-    .tablero .carta:nth-child(1) .lado.frente {
-      background: #FFC312; }
-  .tablero .carta:nth-child(2) {
-    animation-delay: 250ms; }
-    .tablero .carta:nth-child(2) .lado.frente {
-      background: #12CBC4; }
-  .tablero .carta:nth-child(3) {
-    animation-delay: 375ms; }
-    .tablero .carta:nth-child(3) .lado.frente {
-      background: #FFC312; }
-  .tablero .carta:nth-child(4) {
-    animation-delay: 500ms; }
-    .tablero .carta:nth-child(4) .lado.frente {
-      background: #12CBC4; }
-  .tablero .carta:nth-child(5) {
-    animation-delay: 625ms; }
-    .tablero .carta:nth-child(5) .lado.frente {
-      background: #FFC312; }
-  .tablero .carta:nth-child(6) {
-    animation-delay: 750ms; }
-    .tablero .carta:nth-child(6) .lado.frente {
-      background: #12CBC4; }
-  .tablero .carta:nth-child(7) {
-    animation-delay: 875ms; }
-    .tablero .carta:nth-child(7) .lado.frente {
-      background: #FFC312; }
-  .tablero .carta:nth-child(8) {
-    animation-delay: 1000ms; }
-    .tablero .carta:nth-child(8) .lado.frente {
-      background: #12CBC4; }
-  .tablero .carta:nth-child(9) {
-    animation-delay: 1125ms; }
-    .tablero .carta:nth-child(9) .lado.frente {
-      background: #FFC312; }
-  .tablero .carta:nth-child(10) {
-    animation-delay: 1250ms; }
-    .tablero .carta:nth-child(10) .lado.frente {
-      background: #12CBC4; }
-  .tablero .carta:nth-child(11) {
-    animation-delay: 1375ms; }
-    .tablero .carta:nth-child(11) .lado.frente {
-      background: #FFC312; }
-  .tablero .carta:nth-child(12) {
-    animation-delay: 1500ms; }
-    .tablero .carta:nth-child(12) .lado.frente {
-      background: #12CBC4; }
-  .tablero .carta:nth-child(13) {
-    animation-delay: 1625ms; }
-    .tablero .carta:nth-child(13) .lado.frente {
-      background: #FFC312; }
+    .tablero .informacion-tablero .tiempo-tablero {
+      display: flex;
+      justify-content: center; }
   .tablero .carta {
     grid-column: span 2;
     grid-row: span 3;
