--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ a {
   padding: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 30px repeat(6, 1fr);
+  grid-template-rows: 30px repeat(12, 1fr);
   gap: 10px; }
   .tablero .informacion-tablero {
     grid-column: span 12;
@@ -157,13 +157,22 @@ a {
       width: 100%;
       height: 100%;
       backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
       position: absolute;
       border: 5px solid #6F1E51;
       border-radius: 10px;
       cursor: pointer; }
       .tablero .carta .lado.frente {
-        background: yellow;
-        transform: rotateY(180deg); }
+        background: white;
+        transform: rotateY(180deg);
+        display: flex;
+        justify-content: center;
+        align-content: center; }
+        .tablero .carta .lado.frente p {
+          align-self: center;
+          color: black;
+          text-align: center;
+          font-size: 3rem; }
       .tablero .carta .lado.atras {
         background: #B53471;
         display: flex;
@@ -176,7 +185,9 @@ a {
           width: 50%;
           margin: auto;
           border-radius: 50%;
-          backface-visibility: hidden; }
+          backface-visibility: hidden;
+          -webkit-backface-visibility: visible;
+          -moz-backface-visibility: hidden; }
 
 @keyframes rotacion {
   0% {
