--- a/css/main.css
+++ b/css/main.css
@@ -26,31 +26,6 @@ ul {
 a {
   text-decoration: none; }
 
-.menu {
-  position: fixed;
-  top: 50%;
-  right: 0px;
-  transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.75);
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px; }
-  .menu li {
-    padding: 5px;
-    text-align: center; }
-    .menu li a {
-      font-size: 20px;
-      color: white;
-      transition: all .8s ease; }
-      .menu li a span {
-        display: none; }
-    .menu li.menu-selected a {
-      color: #6f1e51; }
-    .menu li:hover a {
-      color: #6f1e51; }
-
 .modo-recomendado {
   border: 2px solid #ED4C67;
   border-radius: 40px;
@@ -63,45 +38,50 @@ a {
   display: flex;
   flex-direction: row; }
   .modo-recomendado .reto {
-    width: 50%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
-    padding: 20px; }
+    padding: 20px;
+    border-radius: 40px;
+    background-color: #6F1E51; }
     .modo-recomendado .reto .titulo-reto {
       color: white;
       margin-bottom: 15px;
       text-transform: uppercase; }
     .modo-recomendado .reto .fecha-reto {
-      text-align: left;
+      text-align: right;
       font-weight: 100;
       font-size: 18px;
       color: #f4f4f4; }
-    .modo-recomendado .reto .iniciar-reto {
-      display: block;
-      color: white;
-      padding: 5px;
-      text-transform: uppercase;
-      transition: all .8s ease; }
-      .modo-recomendado .reto .iniciar-reto:hover {
-        border-radius: 5px;
-        transform: scale(1.05); }
-    .modo-recomendado .reto.reto-diario {
-      border-right: 2px solid #ED4C67;
-      background-color: #6F1E51;
-      border-top-left-radius: 40px;
-      border-bottom-left-radius: 40px; }
-      .modo-recomendado .reto.reto-diario .iniciar-reto {
-        background-color: #1B1464; }
-    .modo-recomendado .reto.reto-semanal {
-      border-left: 2px solid #ED4C67;
-      background-color: #1B1464;
-      border-top-right-radius: 40px;
-      border-bottom-right-radius: 40px; }
-      .modo-recomendado .reto.reto-semanal .iniciar-reto {
-        background-color: #6F1E51; }
+    .modo-recomendado .reto .dificultades {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap; }
+      .modo-recomendado .reto .dificultades .iniciar-reto {
+        display: block;
+        width: 100%;
+        color: white;
+        padding: 5px;
+        background-color: #1B1464;
+        text-transform: uppercase;
+        transition: all .8s ease;
+        margin-bottom: 12px; }
+        .modo-recomendado .reto .dificultades .iniciar-reto:hover {
+          border-radius: 5px;
+          transform: scale(1.05); }
+      .modo-recomendado .reto .dificultades .btn-dificultad {
+        color: white;
+        padding: 5px  7px;
+        background-color: #1B1464;
+        text-transform: uppercase;
+        transition: all .8s ease; }
+        .modo-recomendado .reto .dificultades .btn-dificultad:hover {
+          border-radius: 5px;
+          transform: scale(1.05); }
 
 @media (max-width: 850px) {
   .menu {
